<resources>
    <string name="app_name">Melodieus</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kategori_alat_musik">KATEGORI ALAT MUSIK</string>
    <string name="ritmis">RITMIS</string>
    <string name="melodis">MELODIS</string>
    <string name="harmonis">HARMONIS</string>
    <string name="alat_musik_ritmis">ALAT MUSIK RITMIS</string>
    <string name="alat_musik_melodis">ALAT MUSIK MELODIS</string>
    <string name="alat_musik_harmonis">ALAT MUSIK HARMONIS</string>
    <string name="harmonisi">HARMONIS</string>
    <string name="angklung">Angklung</string>
    <string name="harp">Harp</string>
    <string name="piano">Piano</string>
    <string name="guitar">Guitar</string>
    <string name="flute">Flute</string>
    <string name="trumpet">Trumpet</string>
    <string name="harmonica">Harmonica</string>
    <string name="sasando">Sasando</string>
    <string name="melodiso">MELODIS</string>
    <string name="gendang">Gendang</string>
    <string name="drum">Drum</string>
    <string name="tifa">Tifa</string>
    <string name="gong">Gong</string>
</resources>