<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment1"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.Utamafragment">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="125dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/candal"
        android:text="@string/kategori_alat_musik"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="7dp">

            <LinearLayout
                android:id="@+id/ritmis_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:src="@drawable/pngwing_com"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/candal"
                    android:text="@string/ritmis"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="16sp"
                    tools:ignore="TextSizeCheck" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="7dp">

            <LinearLayout
                android:id="@+id/melodis_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="148dp"
                    android:layout_marginTop="7dp"
                    android:layout_weight="1"
                    android:contentDescription="TODO"
                    android:padding="30dp"
                    android:src="@drawable/pngwing_com_melodis" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/candal"
                    android:text="@string/melodis"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    tools:ignore="TextSizeCheck" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="7dp">

            <LinearLayout
                android:id="@+id/harmonis_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:contentDescription="TODO"
                    android:padding="15dp"
                    android:paddingTop="0dp"
                    android:src="@drawable/ritmos"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/candal"
                    android:text="@string/harmonis"
                    android:textAlignment="center"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    </LinearLayout>

</RelativeLayout>

</layout>