<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".fragment.RitmisFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="3dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TxtTitleRitmis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/candal"
            android:text="@string/ritmis"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/gendang"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/card_border"
            android:clickable="true"
            android:focusable="true"
            android:padding="15dp"
            app:cardCornerRadius="18dp"
            tools:ignore="SpeakableTextPresentCheck">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_gendang"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/kendang"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/btnGendang"
                    android:layout_width="195dp"
                    android:layout_height="100dp"
                    android:background="@drawable/card_border_2"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_gendang"
                    app:layout_constraintTop_toTopOf="parent" >

                    <TextView
                        android:id="@+id/txtGendang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gendang"
                        android:layout_marginTop="35dp"
                        android:textAlignment="center"
                        android:fontFamily="@font/candal"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/drum"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/card_border"
            android:clickable="true"
            android:focusable="true"
            android:padding="15dp"
            app:cardCornerRadius="18dp"
            tools:ignore="SpeakableTextPresentCheck">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_drum"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/drum"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/btnDrum"
                    android:layout_width="195dp"
                    android:layout_height="100dp"
                    android:background="@drawable/card_border_2"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_drum"
                    app:layout_constraintTop_toTopOf="parent" >
                    <TextView
                        android:id="@+id/txtDrum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/drum"
                        android:layout_marginTop="35dp"
                        android:textAlignment="center"
                        android:fontFamily="@font/candal"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tifa"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/card_border"
            android:clickable="true"
            android:focusable="true"
            android:padding="15dp"
            app:cardCornerRadius="18dp"
            tools:ignore="SpeakableTextPresentCheck">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_tifa"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/jimbe"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/btnTifa"
                    android:layout_width="195dp"
                    android:layout_height="100dp"
                    android:background="@drawable/card_border_2"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_tifa"
                    app:layout_constraintTop_toTopOf="parent" >
                    <TextView
                        android:id="@+id/txtTifa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tifa"
                        android:layout_marginTop="35dp"
                        android:textAlignment="center"
                        android:fontFamily="@font/candal"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/gong"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/card_border"
            android:clickable="true"
            android:focusable="true"
            android:padding="15dp"
            app:cardCornerRadius="18dp"
            tools:ignore="SpeakableTextPresentCheck">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_gong"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/gong"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/btnGong"
                    android:layout_width="195dp"
                    android:layout_height="100dp"
                    android:background="@drawable/card_border_2"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_gong"
                    app:layout_constraintTop_toTopOf="parent" >
                    <TextView
                        android:id="@+id/txtGong"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gong"
                        android:layout_marginTop="35dp"
                        android:textAlignment="center"
                        android:fontFamily="@font/candal"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
